# cpp-unity-example

./: CMakeLists.txt  README.md  build_make.sh  build_vs.bat  build_xcode.sh  win.bat
.github/workflows/: cmake.yml
include/: interface.hpp
src/: plugin.cpp
unity/: .gitignore
unity/Assets/: PluginConnector.cs
unity/Assets/Scenes/: SampleScene.unity
unity/ProjectSettings/: ProjectSettings.asset
